test/e2e/features/frontendtls/testdata/client-certs-secret.yaml
apiVersion: v1
data:
  client-9443.crt: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUQyekNDQXNPZ0F3SUJBZ0lVQWt5cm5oUFV0aHJ0bzlvRzNLV01xL2VScDhVd0RRWUpLb1pJaHZjTkFRRUwKQlFBd2ZURUxNQWtHQTFVRUJoTUNWVk14RXpBUkJnTlZCQWdNQ2tOaGJHbG1iM0p1YVdFeEZqQVVCZ05WQkFjTQpEVk5oYmlCR2NtRnVZMmx6WTI4eEhEQWFCZ05WQkFvTUUwbHVkbUZzYVdRZ1EyeHBaVzUwSUVsdVl5NHhJekFoCkJnTlZCQU1NR21sdWRtRnNhV1F0WTJ4cFpXNTBMbVY0WVcxd2JHVXVZMjl0TUI0WERUSTFNVEV5TlRFMU16RXcKTTFvWERUTTFNVEV5TXpFMU16RXdNMW93ZlRFTE1Ba0dBMVVFQmhNQ1ZWTXhFekFSQmdOVkJBZ01Da05oYkdsbQpiM0p1YVdFe [...]
  client-9443.key: LS0tLS1CRUdJTiBQUklWQVRFIEtFWS0tLS0tCk1JSUV2UUlCQURBTkJna3Foa2lHOXcwQkFRRUZBQVNDQktjd2dnU2pBZ0VBQW9JQkFRQzhiOUJ4U2Q2bkxFS3MKQ1NrcGw1bndhNWl0akdVWXVCRVNsQTRjTWQ2Y3Y5VnlBVXU2MXBHbzdvSHhHN0ZTSjFSbU16b0xidi9hd3ZKcgpNTlFTVFJFRGFFRDFLSVFtRlFHMWpzMmFvQWF5b0hLOGhMZDVYUFZPVm1iSEV2UDBaaWVOQTVqR3J0Nm5nY3JrClNGbGxaOE91a0F2NGg4TXRWMEw5TDVFUHU0ejNGS1hveDFuc0RSRXhIWm9kajFBR282RWIwdnY1Z21ZTmpuZm4Kdkt0UzhpZk9jZlhzOGxIQnRGTUxxck5mTFpSbUdpakNBZVVjVld0SC9hU1pvNjNwZy9Bb1prTkNkS2sxVGtycgpaUnZzV0E1a [...]
  client-8443.crt: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUR1ekNDQXFPZ0F3SUJBZ0lVT3ZGUEh4NjRxMVhMVStKRzY4K3NHMmFEQStzd0RRWUpLb1pJaHZjTkFRRUwKQlFBd2JURUxNQWtHQTFVRUJoTUNWVk14RXpBUkJnTlZCQWdNQ2tOaGJHbG1iM0p1YVdFeEZqQVVCZ05WQkFjTQpEVk5oYmlCR2NtRnVZMmx6WTI4eEZEQVNCZ05WQkFvTUMwTnNhV1Z1ZENCSmJtTXVNUnN3R1FZRFZRUUREQkpqCmJHbGxiblF1WlhoaGJYQnNaUzVqYjIwd0hoY05NalV4TVRJMU1UVXpNRFUxV2hjTk16VXhNVEl6TVRVek1EVTEKV2pCdE1Rc3dDUVlEVlFRR0V3SlZVekVUTUJFR0ExVUVDQXdLUTJGc2FXWnZjbTVwWVRFV01CUUdBMVVFQnd3TgpVMkZ1SUVae [...]
  client-8443.key: LS0tLS1CRUdJTiBQUklWQVRFIEtFWS0tLS0tCk1JSUV2UUlCQURBTkJna3Foa2lHOXcwQkFRRUZBQVNDQktjd2dnU2pBZ0VBQW9JQkFRQ0VlZ1Jac1liK01TSVYKcHExdEpEMC9nckJCc2JwY29rbWF2N0hpdWR5Q0xDeHBUa2lRRXJTVFMvZStjbkprSER0ZGk5ZjFpRitCa2VMNwpnN1REVEZDQmFIa2NONkZBSFdEQ2FBNjRYU09vQmJ2RlNMbmpWZy9ZbVR0ZGVCN2kzUm8yWHdrYzFycXNwVVd0Ck92T1JRSGpWQldXTXFRQURJVmNtcncva3QybkdmVGtqbUlSaVBLVVlORWpCdHQ2ZjhEZTNNd2lsMUlLUTFITmYKTmVBT2tBSitPWGRNa3hkMW9qVFo4VEo2Tit2R0JyVHdieFJES090OExqRlZuM1dyRmNOaUk0OHhENGFBMmVtRApMMnB4U2MvK [...]
kind: Secret
metadata:
  name: client-certs
  namespace: curl
