test/e2e/features/frontendtls/testdata/curl-pod-with-certs.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: curl
  namespace: curl
  labels:
    app: curl
    version: v1
    app.kubernetes.io/name: curl
spec:
  terminationGracePeriodSeconds: 0
  containers:
    - name: curl
      image: ghcr.io/kgateway-dev/curl:8.20.0
      imagePullPolicy: IfNotPresent
      command:
        - "tail"
        - "-f"
        - "/dev/null"
      volumeMounts:
        - name: client-certs-hash
          mountPath: /etc/client-certs
          readOnly: true
        - name: client-cert-frontend
          mountPath: /etc/client-certs-frontend
          readOnly: true
        - name: client-cert-2-frontend
          mountPath: /etc/client-certs-2-frontend
          readOnly: true
        - name: client-matching-san
          mountPath: /etc/client-matching-san
          readOnly: true
        - name: client-non-matching-san
          mountPath: /etc/client-non-matching-san
          readOnly: true
        - name: client-matching-signature
          mountPath: /etc/client-matching-signature
          readOnly: true
        - name: client-non-matching-signature
          mountPath: /etc/client-non-matching-signature
          readOnly: true
      resources:
        requests:
          cpu: "100m"
          memory: "64Mi"
        limits:
          cpu: "200m"
          memory: "128Mi"
  volumes:
    - name: client-certs-hash
      secret:
        secretName: client-certs
        defaultMode: 0444
    - name: client-cert-frontend
      secret:
        secretName: client-cert
        defaultMode: 0444
    - name: client-cert-2-frontend
      secret:
        secretName: client-cert-2
        defaultMode: 0444
    - name: client-matching-san
      secret:
        secretName: client-matching-san
        defaultMode: 0444
    - name: client-non-matching-san
      secret:
        secretName: client-non-matching-san
        defaultMode: 0444
    - name: client-matching-signature
      secret:
        secretName: client-matching-signature
        defaultMode: 0444
    - name: client-non-matching-signature
      secret:
        secretName: client-non-matching-signature
        defaultMode: 0444
